# CompressBinaryTable

./: .gitignore  README.md  cbt.py  compress_back_check.py  kanamycin_SVM_results  main.py  ml_check.py  pyproject.toml  setup.py
compressbinarytable/: compressbinarytable  compressbinarytable.py
compressbinarytable.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
conda/: meta.yaml
scripts/: compressbinarytable.py
