[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "compressbinarytable"
version = "0.1.4"
description = "Compresses binary tables"
authors = [{ name="Alper Yurtseven", email="alper.yurtseven@helmholtz-hips.de"},]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pandas >= 1.5.0",
    "numpy >= 1.24.2"
]
